kustomize/infra/envoy-gateway/nextcloud-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: nextcloud-route
  namespace: envoy-gateway-system  # Der Namespace, in dem Envoy läuft
spec:
  hostnames:
    - "nextcloud.home.lan"  # Die Domain für Nextcloud
  rules:
    - matches:
        - uri:
            type: Prefix
            value: "/"
      forwardTo:
        - serviceName: nextcloud  # Name des Nextcloud-Services
          port: 80  # Der Port, auf dem Nextcloud läuft
